--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,9 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 flutter_native_splash:
-  image: image/logo.png
+  image: image/mbtiload.png
   color: "#ffffff"
-  fullscreen: true
+  fill: true
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +69,7 @@ flutter:
   uses-material-design: true
   assets:
     - image/startPage.png
+    - image/mbtiload.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
