--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   flutter_native_splash: ^1.3.3
+  material_floating_search_bar: ^0.3.6
 
   flutter:
     sdk: flutter
@@ -69,6 +70,7 @@ flutter:
   uses-material-design: true
   assets:
     - image/startPage.png
+    - image/logo.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
