--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
 
   flutter:
     sdk: flutter
+  flutter_speed_dial: ^3.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
