--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 dependencies:
   flutter_native_splash: ^1.3.3
   animations: ^2.0.2
+  intl: ^0.17.0
 
   flutter:
     sdk: flutter
