--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,12 @@ dependencies:
   flutter_native_splash: ^1.3.3
   animations: ^2.0.2
   intl: ^0.17.0
+  firebase_storage:
 
   flutter:
     sdk: flutter
   flutter_speed_dial: ^3.0.5
+  image_picker:
 
 
   # The following adds the Cupertino Icons font to your application.
